--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Valz Digital Garden
 SITE_MAIN_LANGUAGE=en
 SITE_BASE_URL=https://valz-digital-garden.pages.dev/
 SHOW_CREATED_TIMESTAMP=false
