--- a/.env
+++ b/.env
@@ -18,9 +18,9 @@ dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
 dgShowLocalGraph=true
-dgShowInlineTitle=true
-dgShowFileTree=true
+dgShowInlineTitle=false
+dgShowFileTree=false
 dgEnableSearch=false
-dgShowToc=true
+dgShowToc=false
 dgLinkPreview=false
 dgShowTags=false
